Finished the user API
