# src/api/helpers/db/db.js
@@ -4,6 +4,7 @@ let r = require('rethinkdb');
 
 const DB_NAME = 'cloudmsgr';
 const TABLE_NAME_USR = 'users';
+const TABLE_PRIM_KEY_USR  = 'email';
 const TABLE_NAME_MSG = 'messages';
 const TABLE_NAME_CONV = 'conversations';
 const COLUMN_NAME_PARTICIPANTS = 'participants';
@@ -17,7 +18,7 @@ const COLUMN_NAME_PARTICIPANTS = 'participants';
 function initSchema(callback) {
   r.connect('localhost', function(error, conn){
     if(error) {
-      console.error('CloudMsgr - init schema - Failed to connect to RethinkDB: '
+      console.error('DB Helper - init schema - Failed to connect to RethinkDB: '
       + error);
       callback(error);
     } else {
@@ -27,7 +28,7 @@ function initSchema(callback) {
         return r.branch(doesExist, '', r.dbCreate(DB_NAME));
       }).run(conn, function(err){
         if(err) {
-          console.error('CloudMsgr - init schema - Failed to create DB: '
+          console.error('DB Helper - init schema - Failed to create DB: '
           + err);
         }
         // close the connection
@@ -46,25 +47,25 @@ function initSchema(callback) {
 function initTables(callback) {
   r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn){
     if(error) {
-      console.error('CloudMsgr - init tables - Failed to connect to DB'
+      console.error('DB Helper - init tables - Failed to connect to DB'
       + error);
       callback(error);
     } else {
       // create the tables as needed
       r.tableList().contains(TABLE_NAME_USR)
       .do(r.branch(r.row, r.tableList(), r.do(function() {
-        return r.tableCreate(TABLE_NAME_USR, {'primaryKey': 'emial'})
+        return r.tableCreate(TABLE_NAME_USR, {'primaryKey': TABLE_PRIM_KEY_USR })
         .do(r.tableList());
       }))).contains(TABLE_NAME_MSG)
       .do(r.branch(r.row, r.tableList(), r.do(function() {
-        return r.tableCreate(TABLE_NAME_MSG, {'primaryKey': 'emial'})
+        return r.tableCreate(TABLE_NAME_MSG)
         .do(r.tableList());
       }))).contains(TABLE_NAME_CONV)
       .do(r.branch(r.row, r.tableList(), r.do(function() {
         return r.tableCreate(TABLE_NAME_CONV).do(r.tableList());
       }))).run(conn, function(err){
         if(err) {
-          console.error('CloudMsgr - init tables - Unexpected error has occured: '
+          console.error('DB Helper - init tables - Unexpected error has occured: '
           + err);
           callbacl();
         } else {
@@ -72,7 +73,7 @@ function initTables(callback) {
         }
         conn.close(function(error){
           if (error) {
-            console.error('CloudMsgr - init tables - An error occured while '
+            console.error('DB Helper - init tables - An error occured while '
             + 'closing connection');
           }
         });
@@ -85,18 +86,18 @@ function initTables(callback) {
  * Add a user to to the database.
  *
  * @param {object} user - the user object with email, password and name
- * @param {function} callback - a callbackfucntion
+ * @param {function} callback - a callback fucntion
  */
 function createUser(user, callback){
   r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn) {
     if(error) {
-      console.error('CloudMsgr - create user - Failed to connect to RethinkDB: '
+      console.error('DB Helper - create user - Failed to connect to RethinkDB: '
       + error);
       callback(error);
     } else {
-      r.table(TABLE_NAME_USR).insert(user).run(conn, function(results){
-        if(results.errors > 0) {
-          Console.error('CloudMsgr - create user - Failed to store user in DB: '
+      r.table(TABLE_NAME_USR).insert(user).run(conn, function(err){
+        if(err) {
+          Console.error('DB Helper - create user - Failed to store user in DB: '
           + user.email);
           callback(results);
         } else {
@@ -104,7 +105,75 @@ function createUser(user, callback){
         }
         conn.close(function(error){
           if (error) {
-            console.error('CloudMsgr - create user - An error occured while '
+            console.error('DB Helper - create user - An error occured while '
+            + 'closing connection');
+          }
+        });
+      });
+    }
+  });
+}
+
+/**
+ * Fetches a user from DB ny his/her userID
+ *
+ * @param {string} userID - the unique user indentifier (email)
+ * @param {functon} callback - the callback function
+ */
+function getUser(userID, callback) {
+  r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn) {
+    if(error) {
+      console.error('DB Helper - get user - Failed to connect to RethinkDB: '
+        + error);
+      callback(error);
+    } else {
+      r.table(TABLE_NAME_USR).get(userID).run(conn, function(err, cursor) {
+        if(err) {
+          console.error('DB Helper - get user - An error occured while fetching'
+          + ' user {' + userID + '} from DB');
+        }
+        callback(err, cursor);
+        conn.close(function(error){
+          if (error) {
+            console.error('DB Helper - get user - An error occured while'
+            + ' closing connection');
+          }
+        });
+      });
+    }
+  });
+}
+
+/**
+ *
+ */
+function getAllUsers(callback) {
+  r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn) {
+    if(error) {
+      console.error('DB Helper - get all users - Failed to connect to'
+        +' RethinkDB: '+ error);
+      callback(error);
+    } else {
+      r.table(TABLE_NAME_USR).withFields('email', 'first_name', 'last_name')
+      .run(conn, function(err, cursor) {
+        if(err) {
+          console.error('DB Helper - get all users - An error occured while'
+          + ' queryinh the DB');
+          callback(err)
+        } else {
+          cursor.toArray(function(err, results) {
+            if (err) {
+              console.error('DB Helper - get all users - An error occured while'
+              + ' fetching the uses from DB');
+              callback(error)
+            } else {
+              callback(null, results);
+            }
+          });
+        }
+        conn.close(function(error){
+          if (error) {
+            console.error('DB Helper - get all users - An error occured while '
             + 'closing connection');
           }
         });
@@ -122,14 +191,14 @@ function createUser(user, callback){
 function createConverstaion(participants, callback) {
   r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn) {
     if(error) {
-      console.error('CloudMsgr - create createConverstaion - Failed to '
+      console.error('DB Helper - create createConverstaion - Failed to '
         + 'connect to RethinkDB: ' + error);
       callback(error);
     } else {
       r.table(TABLE_NAME_CONV).insert({COLUMN_NAME_PARTICIPANTS: participants})
       .run(conn, function(results){
         if(results.errors > 0) {
-          Console.error('CloudMsgr - create user - Failed to store user in DB: '
+          Console.error('DB Helper - create user - Failed to store user in DB: '
           + user.email);
           callback(results);
         } else {
@@ -137,7 +206,7 @@ function createConverstaion(participants, callback) {
         }
         conn.close(function(error) {
           if (error) {
-            console.error('CloudMsgr - create user - An error occured while '
+            console.error('DB Helper - create user - An error occured while '
             + 'closing connection');
           }
         });
@@ -155,7 +224,7 @@ function createConverstaion(participants, callback) {
 function getConversiontrionsFor(userID, callback) {
   r.connect({'host': 'localhost', 'db': DB_NAME}, function(error, conn) {
     if(error) {
-      console.error('CloudMsgr - create createConverstaion - Failed to '
+      console.error('DB Helper - create createConverstaion - Failed to '
         + 'connect to RethinkDB: ' + error);
       callback(error);
     } else {
@@ -164,7 +233,7 @@ function getConversiontrionsFor(userID, callback) {
         callback(results);
         conn.close(function(error) {
           if (error) {
-            console.error('CloudMsgr - conversations - An error occured while '
+            console.error('DB Helper - conversations - An error occured while '
             + 'closing connection');
           }
         });
@@ -182,5 +251,7 @@ function getMessagesIn(convoId, callback) {
 module.exports = {
   initSchema: initSchema,
   initTables: initTables,
-  createUser, createUser
+  createUser, createUser,
+  getUser: getUser,
+  getAllUsers: getAllUsers
 };
